# ai-provenance-protocol

./: .cursorrules  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
assets/certification/: USAGE.md
docs/: embedding-modes.md  getting-started.md  mcp-integration.md  regulatory-mapping.md  verification-protocol.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/ai_provenance_protocol/: __init__.py  _create.py  _embed.py  _hash.py  _review.py  _types.py  _validate.py  _verify.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: create.ts  embed.ts  hash.ts  index.ts  review.ts  types.ts  validate.ts  verify.ts
spec/v1.0/: spec.md
tools/validator/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
tools/validator/src/: cli.ts
website/: mdx-components.js  package-lock.json  package.json
website/app/: layout.jsx  sitemap.js
website/app/[[...mdxPath]]/: page-schemas.js  page.jsx
website/components/: EuAiActCountdown.jsx
website/content/: _meta.js  index.mdx
website/content/community/: _meta.js  contributing.mdx  governance.mdx  index.mdx  roadmap.mdx
website/content/docs/: _meta.js  embedding-modes.mdx  getting-started.mdx  index.mdx  mcp-integration.mdx  regulatory-mapping.mdx  sdk.mdx  verification-protocol.mdx
website/content/specification/: _meta.js  content-hashing.mdx  core-schema.mdx  embedding-modes.mdx  extensions.mdx  index.mdx  (+4 more)
website/public/: llms-full.txt  llms.txt  robots.txt
white-paper/: ai-provenance-protocol.md
(+1 files in other folders)
